--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,4 @@ pythonLearn/模拟邮箱发送邮件.py
 pythonLearn/.DS_Store
 pythonLearn/spiders/爬取百度百科qq空间.py
 pythonLearn/模拟邮箱发送邮件.py
+pythonLearn/.DS_Store
