--- a/.gitignore
+++ b/.gitignore
@@ -266,9 +266,9 @@ pythonLearn/spiders/爬取百度百科qq空间.py
 pythonLearn/案例/模拟邮箱发送邮件.py
 pythonLearn/案例/购物车.py
 pythonLearn/模拟邮箱发送邮件.py
-*.py
 .DS_Store
 pythonLearn/.DS_Store
 pythonLearn/spiders/爬取百度百科qq空间.py
 pythonLearn/模拟邮箱发送邮件.py
+pythonLearn/.DS_Store
 pythonLearn/.DS_Store
